<resources>
    <string name="app_name">EnglishStudy</string>

    <!-- bottom navigation titles -->
    <string name="bottom_navigation_check_title">check</string>
    <string name="bottom_navigation_list_title">list</string>

    <string name="content_description">no image</string>

    <!-- add edit english sentence dialog -->
    <string name="english_sentence_hint">english sentence</string>
    <string name="japanese_sentence_hint">japanese sentence</string>
    <string name="description_hint">description</string>
    <string name="cancel_save_sentence">cancel</string>
    <string name="do_save_sentence">save</string>


    <!-- check -->
    <string name="check_start_button">start</string>
    <string name="check_next_button">next</string>
    <string name="check_end_button">end</string>
    <string name="menu_check_sentences_speed">speed</string>

    <!-- show sentences -->
    <string name="show_sentences_search">search</string>

    <!--  detail  -->
    <string name="detail_english">English</string>
    <string name="detail_japanese">Japanese</string>
    <string name="detail_description">description</string>
    <string name="detail_date">date</string>


</resources>