<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/edit_english_sentence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/english_sentence_hint"
        android:autofillHints="your english sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_japanese_sentence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage"
        android:hint="@string/japanese_sentence_hint"
        android:autofillHints="your english sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_english_sentence" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/description_hint"
        android:autofillHints="your english sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_japanese_sentence" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_save_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_save_sentence"
        android:layout_marginEnd="@dimen/save_sentence_dialog_button_margin_end"
        app:layout_constraintEnd_toStartOf="@id/do_save_sentence"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/do_save_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_save_sentence"
        android:layout_marginEnd="@dimen/save_sentence_dialog_button_margin_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>