<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_english"
                android:textSize="@dimen/english_sentence_detail_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                android:layout_marginTop="@dimen/english_sentence_detail_string_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/registered_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/english_sentence_detail_registered_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/english" />

            <TextView
                android:id="@+id/japanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_japanese"
                android:textSize="@dimen/english_sentence_detail_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                android:layout_marginTop="@dimen/english_sentence_detail_string_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registered_english" />

            <TextView
                android:id="@+id/registered_japanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/english_sentence_detail_registered_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/japanese" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_description"
                android:textSize="@dimen/english_sentence_detail_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                android:layout_marginTop="@dimen/english_sentence_detail_string_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registered_japanese"/>

            <TextView
                android:id="@+id/registered_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/english_sentence_detail_registered_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_date"
                android:textSize="@dimen/english_sentence_detail_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                android:layout_marginTop="@dimen/english_sentence_detail_string_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registered_description" />

            <TextView
                android:id="@+id/registered_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/english_sentence_detail_registered_string_size"
                android:layout_marginStart="@dimen/english_sentence_detail_string_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />


            <ImageView
                android:id="@+id/edit_sentence"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_edit_sentence"
                android:layout_marginTop="@dimen/english_sentence_detail_delete_or_edit_icon_margin_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/delete_sentence"
                app:layout_constraintTop_toBottomOf="@id/registered_date"
                android:contentDescription="@string/content_description" />

            <ImageView
                android:id="@+id/delete_sentence"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_delete_sentence"
                android:layout_marginTop="@dimen/english_sentence_detail_delete_or_edit_icon_margin_top"
                app:layout_constraintStart_toEndOf="@id/edit_sentence"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registered_date"
                android:contentDescription="@string/content_description"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>